short responses are completed

--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -7,12 +7,26 @@ Please define what each HTTP verb does. Then, provide an example of when you wou
 - DELETE
 
 # Answer
-1. GET -
+1. GET - In `C.R.U.D` : `Reading`. 
+    > HTTP GET method is used for fetching data
+    >
+    >To retrieve data, we employ the HTTP GET method. When you visit a webpage, your browser sends GET requests to the server to fetch HTML, images, and other resources
 
-2. POST -
+2. POST - In `C.R.U.D` : `Create`. 
+    >HTTP POST method is used when creating new resources
+    >
+    >We use the HTTP POST method to create new resources. For example, when a user submits a form on a website, the form data is sent to the server using POST to create a new record in a database.
 
-3. PUT/PATCH -
+3. PUT/PATCH - In `C.R.U.D` : `Update` - Used for updating resources
+     >HTTP PATCH is used to update specific fields
+     > .PATCH allows for partial updates, like changing a user’s email address. 
+     >
+     >HTTP PUT is used to replace the entire resource.
+     >PUT, on the other hand, replaces the entire resource, useful when you need to update all fields.
 
-4. DELETE -
+4. DELETE - In `C.R.U.D` : `Delete`
+    >HTTP DELETE is used to delete resouces
+    > 
+    >When you delete a post on a social media platform, a DELETE request is sent to the server to delete that specific post.
 
 # Teacher Feedback
