--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -3,6 +3,15 @@
 What is the "Request/Response Cycle?"
 
 # Answer
+`HTTP` stands for ***Hypertext Transfer Protocol*** -  It is the standard for communication over the internet
 
+The `HTTP Request/Response cycle` is the ***pattern*** of **communication** used by two computers communicating using the HTTP protocol. It works like this:
 
+        The program/computer making the request is the client. The client must initiate a request. A server can’t reach out and send Responses to clients on its own. It just waits for incoming requests. That program/computer responding to the request is called the server. The server must already be up and running and ready to accept incoming requests.
+
+>The request and response sent between the client and server each contain important information including:
+ - The request URL of the specific requested resource
+ - The request verb — what it wants the server to do (post something new, send back some data, update or delete something)
+ - The response status code (did the request succeed?)
+ - The response body (the data sent back to the client)
 # Teacher Feedback
