--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -3,14 +3,14 @@ Explain what the following status codes mean. Don't just copy and paste the defa
 
 # Answer
 
-1. 200 -
+1. 200 - `OK` : Request granted/success
 
-2. 201 -
+2. 201 - `CREATED` : request granted + new resource you have
 
-3. 204 -
+3. 204 - `NO CONTENT` : request granted but there is no new resource
 
-4. 404 -
+4. 404 - `NOT FOUND` : Can not be found; no redirection
 
-5. 500 -
+5. 500 - `INTERNAL SERVER ERROR` : Request denied, can not find issue
 
 # Teacher Feedback
