--- a/short-answers/q6.md
+++ b/short-answers/q6.md
@@ -8,13 +8,13 @@
 
 # Answer
 
-1. `Response.ok` -
+1. `Response.ok` - **Response.ok** property returns true if the status is in the 200 range. Immeditately tell us if our request was successful and, if not, why
 
-2. `Response.status` -
+2. `Response.status` - The **Response.status** property tells us the numerical status code. Immediately tell us if our request was successful and, if not, why
 
-3. `Response.url` -
+3. `Response.url` - returns the full URL of the property that we fetched
 
-4. `Response.headers` -
+4. `Response.headers` - Accessing the headers property on the response object gives you the ability to look into the HTTP headers returned by the request:
 
 
 # Teacher Feedback
