--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -3,6 +3,8 @@
 Who sends the HTTP status code: the client or the server? What is the point of the status code?
 
 # Answer
+When a website is visited, the browser (client) sends the request to the sites server, and the server responds with a `status code`. The status code is a code given back to indicate wether the HTTP request has been successfully completed.
 
+>The server sends the HTTP status code - it is given back to the client
 
 # Teacher Feedback
