Graded short response

--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -30,3 +30,5 @@ Please define what each HTTP verb does. Then, provide an example of when you wou
     >When you delete a post on a social media platform, a DELETE request is sent to the server to delete that specific post.
 
 # Teacher Feedback
+Score: 3/3
+Great detailed explanation!
