--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -15,3 +15,4 @@ The `HTTP Request/Response cycle` is the ***pattern*** of **communication** used
  - The response status code (did the request succeed?)
  - The response body (the data sent back to the client)
 # Teacher Feedback
+Score: 3/3
