--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -8,3 +8,4 @@ When a website is visited, the browser (client) sends the request to the sites s
 >The server sends the HTTP status code - it is given back to the client
 
 # Teacher Feedback
+Score: 3/3
