--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -14,3 +14,4 @@ Explain what the following status codes mean. Don't just copy and paste the defa
 5. 500 - `INTERNAL SERVER ERROR` : Request denied, can not find issue
 
 # Teacher Feedback
+Score: 3/3
