--- a/short-answers/q5.md
+++ b/short-answers/q5.md
@@ -5,3 +5,4 @@ What are the two arguments that we pass into `fetch` and what do they do? What d
 The first argument is a string URL and the second is an optional argument that includes information regarding the request you want to make to the database or API. If you are only trying to get data from an API, you do not need to use the second argument.
 
 # Teacher Feedback
+Score: 3/3
